# TBS

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  ThreadPool.hpp  ThunderByteScan.hpp  ThunderByteScan.sln
ThunderByteScan/: ThunderByteScan.vcxproj  ThunderByteScan.vcxproj.filters  test_thunder_byte_scan.cpp
cli/: CMakeLists.txt  TBSCLI.cpp  main.cpp
cmake/: CBuildKit.cmake  TBSConfig.cmake  TBSConfig.cmake.in  install_target.cmake
include/: TBS.hpp  ThunderByteScan.hpp
include/TBS/: TBS.hpp
tests/: CMakeLists.txt  TBSBenchmarks.cpp  TBSBenchmarksSIMD.cpp  TBSCLITest.cxx  TBSSimdTest.cpp  TBSSimdTestSIMD.cpp  TBSTests.cpp  TestInclution.cpp  main.cpp
